ocaml/testsuite/tests/jane-modular-syntax/user_error3_1.compilers.reference
File "user_error3_1.ml", line 9, characters 31-55:
9 | let _misnamed_extension = () [@jane.invalid_erasability];;
                                   ^^^^^^^^^^^^^^^^^^^^^^^^
Error: Cannot have an attribute named [@jane.invalid_erasability]: Missing a feature component
